--- a/includes/styles.css
+++ b/includes/styles.css
@@ -52,7 +52,14 @@
 	color: red;
 }
 
-
+.header {
+	width:100%;
+	text-align:center;
+	padding-top:50px;
+	padding-bottom:30px;
+	font-size: 22px;
+	font-weight: bold;
+}
 
 
 
