--- a/includes/styles.css
+++ b/includes/styles.css
@@ -3,20 +3,19 @@
 */
 
 .container {
+
 }
 
 .sidebar {
-	outline: 1px solid black;
 	width: 250px;
 	height: 100%;
 	float: left;
 }
 
 .main {
-	outline: 1px solid black;
-	width: auto;
 	height: 100%;
-	overflow: scroll;
+	width: calc(100% - 250px);
+	float: right;
 }
 
 .logo {
@@ -34,16 +33,18 @@
 }
 
 .content {
-	outline: 1px solid black;
-	height: 100%;
+	width: 100%;
+	height: calc(100% - 100px);
+	padding: 15px;
+	overflow-y: scroll;
 }
 
 .messages {
-	padding-left:20px;
-	padding-top:10px;
-	outline: 1px solid black;
-	height: 90px;
-	text-align:left;
+	padding: 5px 0 0 10px;
+	height: 100px;
+	text-align: left;
+	box-shadow: 0 1px 0 #000;
+	overflow-y: scroll;
 }
 
 .messages ul {
@@ -52,11 +53,10 @@
 	color: red;
 }
 
-.header {
-	width:100%;
-	text-align:center;
-	padding-top:50px;
-	padding-bottom:30px;
+.heading {
+	width: 100%;
+	text-align: center;
+	padding-bottom: 20px;
 	font-size: 22px;
 	font-weight: bold;
 }
@@ -70,6 +70,7 @@
 ul.nav li {
     text-indent: 20px;
     line-height: 40px;
+	list-style-type: none;
 }
 
 ul.nav li a {
@@ -77,7 +78,7 @@ ul.nav li a {
     text-decoration: none;
     color: #999999;
 	background-color: #222;
-		padding-right: 20px;
+	padding-right: 20px;
 }
 
 ul.nav li a:hover {
@@ -107,38 +108,34 @@ ul.nav > li:hover ul {
 
 
 /*
-	General HTML styles
+	CSS Reset
+	From: http://meyerweb.com/eric/tools/css/reset/
 */
 
-* {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	font-size: 100%;
+	font: inherit;
 	vertical-align: baseline;
-	box-sizing: border-box;
 }
 
+html {
+  box-sizing: border-box;
+}
 *, *:before, *:after {
-	box-sizing: inherit;
-}
-
-body {
-	line-height: 1;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-table td {
-    padding: 6px;
-}
-
-input, select {
-	outline: 1px solid black;	
+  box-sizing: inherit;
 }
